# pubgrub-pyo3

./: Cargo.toml  README.md  pyproject.toml
python/pubgrub/: __init__.py  __init__.pyi  provider.py
src/: lib.rs
test/: test_version_specifiers.py
